JavaDoc and formatting