@@ -9,13 +9,14 @@ import it.polimi.ingsw.model.cards.PlaceableCard;
 import it.polimi.ingsw.model.cards.PlayerHand;
 import it.polimi.ingsw.model.cards.enumeration.Reign;
 import it.polimi.ingsw.model.cards.enumeration.Resource;
-import it.polimi.ingsw.protocol.messages.ConnectionState.*;
+import it.polimi.ingsw.protocol.messages.ConnectionState.availableColorsMessage;
+import it.polimi.ingsw.protocol.messages.ConnectionState.connectionResponseMessage;
+import it.polimi.ingsw.protocol.messages.ConnectionState.unavailableNamesMessage;
+import it.polimi.ingsw.protocol.messages.EndGameState.declareWinnerMessage;
 import it.polimi.ingsw.protocol.messages.PlayerTurnState.updatePlayerMessage;
-import it.polimi.ingsw.protocol.messages.ServerOptionState.*;
-import it.polimi.ingsw.protocol.messages.EndGameState.*;
+import it.polimi.ingsw.protocol.messages.ServerOptionState.serverOptionMessage;
 import it.polimi.ingsw.protocol.messages.currentStateMessage;
 import it.polimi.ingsw.protocol.messages.responseMessage;
-
 
 import java.util.*;
 import java.util.stream.Collectors;
@@ -27,7 +28,6 @@ public class ViewCLI extends View {
     //the purpose of ViewCLI is to handle the interaction with the user and
     // visualize what he needs to see in order to play the game
     // by printing it in the command line
-
 
     //COLORS
 
@@ -61,7 +61,6 @@ public class ViewCLI extends View {
     private static final String BRIGHT_CYAN_BACKGROUND = "\033[106m";
     private static final String BRIGHT_WHITE_BACKGROUND = "\033[107m";
 
-
     /**
      * method {@code ViewCLI}: constructs a new ViewCLI
      */
@@ -70,21 +69,43 @@ public class ViewCLI extends View {
     }
 
     /**
+     * method {@code getBgColor}: gets the background color
+     *
+     * @param card the card to get the background color of
+     * @return the background color
+     */
+    private static String getBgColor(PlaceableCard card) {
+        Reign reign = card.getReign();
+        String BGColor;
+        switch (reign) {
+            case Fungus -> BGColor = RED_BACKGROUND;
+
+            case Insect -> BGColor = PURPLE_BACKGROUND;
+
+            case Animal -> BGColor = CYAN_BACKGROUND;
+
+            case Plant -> BGColor = GREEN_BACKGROUND;
+
+            case null -> BGColor = YELLOW_BACKGROUND;
+
+        }
+        return BGColor;
+    }
+
+    /**
      * method {@code askPortIP}: asks the user to enter the IP and the port of the server
      *
      * @return String[]
      */
     @Override
-    public String askIP(){
+    public String askIP() {
         Scanner scanner = new Scanner(System.in);
-        String server = "";
+        String server;
 
         System.out.print("Enter IP: ");
         server = scanner.nextLine();
         return server;
     }
-
-
 
     /**
      * Communicates to the user he lost connection
@@ -93,65 +114,33 @@ public class ViewCLI extends View {
         System.out.println("\n" + RED_BACKGROUND + "You have been disconnected." + RESET + "\n");
     }
 
-
-
-
     /**
      * Visualizes the current state of the players
+     *
      * @param message: currentStateMessage
      */
-    public void updatePlayer (currentStateMessage message){
+    public void updatePlayer(currentStateMessage message) {
         System.out.println("\n This is the turn of " + message.getCurrentPlayer().getNickname());
         System.out.println("ID of the match: " + message.getMatchID());
         System.out.println("The online players are: " + message.getOnlinePlayers());
 
-        if(!Objects.equals(message.getStateName(), "StarterCardState"))
-        {
+        if (!Objects.equals(message.getStateName(), "StarterCardState")) {
             ArrayList<String> objectives = new ArrayList<>();
-            objectives.add("");
-            objectives.add("");
-            objectives.add("");
-            objectives.add("");
-            objectives.add("");
-            objectives.add("");
-            objectives.add("");
-            objectives.add("");
+            addOutput(objectives);
             printObjective(message.getCommonObjectiveCards().get(0).getID(), objectives);
             printObjective(message.getCommonObjectiveCards().get(1).getID(), objectives);
 
             System.out.println("The common objectives are: ");
-            System.out.println(objectives.get(0));
-            System.out.println(objectives.get(1));
-            System.out.println(objectives.get(2));
-            System.out.println(objectives.get(3));
-            System.out.println(objectives.get(4));
-            System.out.println(objectives.get(5));
-            System.out.println(objectives.get(6));
-            System.out.println(objectives.get(7));
+            printOutput(objectives);
 
-            if(!Objects.equals(message.getStateName(), "ObjectiveState")) {
-                if(message.getPlayer().getNickname().equals(message.getCurrentPlayer().getNickname())){
+            if (!Objects.equals(message.getStateName(), "ObjectiveState")) {
+                if (message.getPlayer().getNickname().equals(message.getCurrentPlayer().getNickname())) {
                     System.out.println("The private objective is: ");
                     objectives = new ArrayList<>();
-                    objectives.add("");
-                    objectives.add("");
-                    objectives.add("");
-                    objectives.add("");
-                    objectives.add("");
-                    objectives.add("");
-                    objectives.add("");
-                    objectives.add("");
+                    addOutput(objectives);
                     printObjective(message.getPlayer().getObjective().getID(), objectives);
-                    System.out.println(objectives.get(0));
-                    System.out.println(objectives.get(1));
-                    System.out.println(objectives.get(2));
-                    System.out.println(objectives.get(3));
-                    System.out.println(objectives.get(4));
-                    System.out.println(objectives.get(5));
-                    System.out.println(objectives.get(6));
-                    System.out.println(objectives.get(7));
-                }
-                else {
+                    printOutput(objectives);
+                } else {
                     System.out.println("The private objective is: ?");
                 }
             }
@@ -161,7 +150,7 @@ public class ViewCLI extends View {
 
         System.out.println("Score of " + message.getCurrentPlayer().getNickname() + ": " + message.getCurrentPlayer().getScore());
 
-        if(!Objects.equals(message.getStateName(), "StarterCardState")) {
+        if (!Objects.equals(message.getStateName(), "StarterCardState")) {
             this.showPlayerArea(message.getCurrentPlayer().getPlayerArea());
         }
 
@@ -175,7 +164,22 @@ public class ViewCLI extends View {
     }
 
     /**
+     * @param output ArrayList<String>
+     */
+    private void addOutput(ArrayList<String> output) {
+        output.add("");
+        output.add("");
+        output.add("");
+        output.add("");
+        output.add("");
+        output.add("");
+        output.add("");
+        output.add("");
+    }
+
+    /**
      * Prints the current state of the common area
+     *
      * @param area CommonArea to be printed
      */
     protected void showCommonArea(CommonArea area) {
@@ -186,6 +190,7 @@ public class ViewCLI extends View {
 
     /**
      * Prints the first row of the common area
+     *
      * @param area CommonArea to be printed
      */
     private void firstRowCommonArea(CommonArea area) {
@@ -211,7 +216,7 @@ public class ViewCLI extends View {
             this.printDeck(output, null);
         }
         try {
-            this.printCard(output, area.getTableCards().get(0));
+            this.printCard(output, area.getTableCards().getFirst());
         } catch (IndexOutOfBoundsException e) {
             this.printCard(output, null);
         }
@@ -225,6 +230,7 @@ public class ViewCLI extends View {
 
     /**
      * Prints the second row of the common area
+     *
      * @param area CommonArea to be printed
      */
     private void secondRowCommonArea(CommonArea area) {
@@ -255,7 +261,6 @@ public class ViewCLI extends View {
             this.printCard(output, null);
         }
 
-
         System.out.println(index);
         System.out.println(output.get(0));
         System.out.println(output.get(1));
@@ -265,26 +270,24 @@ public class ViewCLI extends View {
 
     /**
      * Prints the color and the type (resource or gold) of the first card on top of the deck
+     *
      * @param output ArrayList<String> to be printed
-     * @param card PlaceableCard on top of the deck
+     * @param card   PlaceableCard on top of the deck
      */
-    private void printDeck(ArrayList<String> output,PlaceableCard card) {
+    private void printDeck(ArrayList<String> output, PlaceableCard card) {
 
         // Adds a space column between the decks
         output.set(0, output.get(0) + " ");
         output.set(1, output.get(1) + " ");
         output.set(2, output.get(2) + " ");
 
-
-        if(card == null) {
-            output.set(0, output.get(0) + BLACK_BACKGROUND + String.format("%10s", "") + RESET);
-            output.set(1, output.get(1) + BLACK_BACKGROUND +  String.format("%2s", "") + "EMPTY" + String.format("%3s", "")  + RESET);
-            output.set(2, output.get(2) + BLACK_BACKGROUND + String.format("%10s", "") + RESET);
+        if (card == null) {
+            setOutput(output);
 
         } else {
             Reign reign = card.getReign();
 
-            if(card.isGold()) {
+            if (card.isGold()) {
                 switch (reign) {
                     case Fungus -> {
                         output.set(0, output.get(0) + RED_BACKGROUND + String.format("%3s", "") + YELLOW_BACKGROUND + String.format("%4s", "") + RED_BACKGROUND + String.format("%3s", "") + RESET);
@@ -318,7 +321,7 @@ public class ViewCLI extends View {
                 }
                 case Insect -> {
                     output.set(0, output.get(0) + PURPLE_BACKGROUND + String.format("%10s", "") + RESET);
-                    output.set(1, output.get(1) + PURPLE_BACKGROUND + String.format("%2s" , "") + "INSECT" + PURPLE_BACKGROUND + String.format("%2s", "") + RESET);
+                    output.set(1, output.get(1) + PURPLE_BACKGROUND + String.format("%2s", "") + "INSECT" + PURPLE_BACKGROUND + String.format("%2s", "") + RESET);
                     output.set(2, output.get(2) + PURPLE_BACKGROUND + String.format("%10s", "") + RESET);
                 }
                 case Animal -> {
@@ -341,11 +344,20 @@ public class ViewCLI extends View {
         }
     }
 
+    /**
+     * @param output ArrayList<String>
+     */
+    private void setOutput(ArrayList<String> output) {
+        output.set(0, output.get(0) + BLACK_BACKGROUND + String.format("%10s", "") + RESET);
+        output.set(1, output.get(1) + BLACK_BACKGROUND + String.format("%2s", "") + "EMPTY" + String.format("%3s", "") + RESET);
+        output.set(2, output.get(2) + BLACK_BACKGROUND + String.format("%10s", "") + RESET);
+    }
 
     /**
      * Adds a card to be printed in the ArrayList<String> output
+     *
      * @param output ArrayList<String> to be printed
-     * @param card PlaceableCard to be printed
+     * @param card   PlaceableCard to be printed
      */
     private void printCard(ArrayList<String> output, PlaceableCard card) {
 
@@ -355,59 +367,40 @@ public class ViewCLI extends View {
         output.set(2, output.get(2) + " ");
 
 
-        if(card == null) {
-            output.set(0, output.get(0) + BLACK_BACKGROUND + String.format("%10s", "") + RESET);
-            output.set(1, output.get(1) + BLACK_BACKGROUND + String.format("%2s", "") + "EMPTY" + String.format("%3s", "")  + RESET);
-            output.set(2, output.get(2) + BLACK_BACKGROUND + String.format("%10s", "") + RESET);
+        if (card == null) {
+            setOutput(output);
             return;
         }
 
-        Reign reign = card.getReign();
-        String BGColor = "";
-        switch (reign) {
-            case Fungus -> {
-                BGColor = RED_BACKGROUND;
-            }
-            case Insect -> {
-                BGColor = PURPLE_BACKGROUND;
-            }
-            case Animal -> {
-                BGColor = CYAN_BACKGROUND;
-            }
-            case Plant -> {
-                BGColor = GREEN_BACKGROUND;
-            }
-            case null -> {
-               BGColor = YELLOW_BACKGROUND;
-            }
-        }
+        String BGColor = getBgColor(card);
 
         // Gets all the resources of the card
         ArrayList<String> resources = this.resourceToPrint(card);
 
-        if(card.isGold()) {
-            output.set(0, output.get(0) + BGColor + resources.get(0) + YELLOW_BACKGROUND + String.format("%4s", "") + resources.get(1)  + RESET);
-            if(card.isFront())
-                output.set(1, output.get(1) + YELLOW_BACKGROUND + " " + BGColor + String.format("%3s%2d%3s", "", card.getID(),"") + YELLOW_BACKGROUND + " " + RESET);
+        if (card.isGold()) {
+            output.set(0, output.get(0) + BGColor + resources.get(0) + YELLOW_BACKGROUND + String.format("%4s", "") + resources.get(1) + RESET);
+            if (card.isFront())
+                output.set(1, output.get(1) + YELLOW_BACKGROUND + " " + BGColor + String.format("%3s%2d%3s", "", card.getID(), "") + YELLOW_BACKGROUND + " " + RESET);
             else
                 output.set(1, output.get(1) + YELLOW_BACKGROUND + " " + BGColor + String.format("%1s%2s%1s%3s%1s", "", card.getID(), "", this.reignToPrint(card), "") + YELLOW_BACKGROUND + " " + RESET);
-            output.set(2, output.get(2) + BGColor + resources.get(2) +  YELLOW_BACKGROUND + String.format("%4s", "") + resources.get(3)  + RESET);
+            output.set(2, output.get(2) + BGColor + resources.get(2) + YELLOW_BACKGROUND + String.format("%4s", "") + resources.get(3) + RESET);
             return;
         }
 
-        output.set(0, output.get(0) + BGColor + resources.get(0) + BGColor + String.format("%4s", "") + resources.get(1)  + RESET);
+        output.set(0, output.get(0) + BGColor + resources.get(0) + BGColor + String.format("%4s", "") + resources.get(1) + RESET);
         if (card.isFront())
-            output.set(1, output.get(1) + BGColor +  String.format("%4s%2d%4s", "", card.getID(),"") + RESET);
+            output.set(1, output.get(1) + BGColor + String.format("%4s%2d%4s", "", card.getID(), "") + RESET);
         else if (card.isResource())
             output.set(1, output.get(1) + BGColor + String.format("%2s%2s%1s%3s%2s", "", card.getID(), "", this.reignToPrint(card), "") + RESET);
         else if (card.isStarter())
-            output.set(1, output.get(1) + BGColor + String.format("%4s%2d%4s", "", card.getID(),"") + RESET);
-        output.set(2, output.get(2) + BGColor + resources.get(2) + BGColor + String.format("%4s", "") + resources.get(3)  + RESET);
+            output.set(1, output.get(1) + BGColor + String.format("%4s%2d%4s", "", card.getID(), "") + RESET);
+        output.set(2, output.get(2) + BGColor + resources.get(2) + BGColor + String.format("%4s", "") + resources.get(3) + RESET);
 
     }
 
     /**
      * Converts the resources of a card to a string to be printed
+     *
      * @param card the card to be converted
      * @return the string to be printed
      */
@@ -416,9 +409,9 @@ public class ViewCLI extends View {
         for (Resource resource : card.getResource()) {
             switch (resource) {
                 case Fungus -> output.add(BLACK_TEXT + BRIGHT_WHITE_BACKGROUND + "FUN" + RESET);
-                case Insect -> output.add(BLACK_TEXT + BRIGHT_WHITE_BACKGROUND  + "INS" + RESET);
+                case Insect -> output.add(BLACK_TEXT + BRIGHT_WHITE_BACKGROUND + "INS" + RESET);
                 case Animal -> output.add(BLACK_TEXT + BRIGHT_WHITE_BACKGROUND + "ANI" + RESET);
-                case Plant -> output.add(BLACK_TEXT + BRIGHT_WHITE_BACKGROUND  + "PLA" + RESET);
+                case Plant -> output.add(BLACK_TEXT + BRIGHT_WHITE_BACKGROUND + "PLA" + RESET);
                 case Manuscript -> output.add(BLACK_TEXT + BRIGHT_WHITE_BACKGROUND + "MAN" + RESET);
                 case Quill -> output.add(BLACK_TEXT + BRIGHT_WHITE_BACKGROUND + "QUI" + RESET);
                 case Inkwell -> output.add(BLACK_TEXT + BRIGHT_WHITE_BACKGROUND + "INK" + RESET);
@@ -439,6 +432,7 @@ public class ViewCLI extends View {
 
     /**
      * Converts the resources of a cell to a string to be printed
+     *
      * @param cell the cell to be converted
      * @return the string to be printed
      */
@@ -472,11 +466,12 @@ public class ViewCLI extends View {
 
     /**
      * Converts the reign of a card to a string to be printed
+     *
      * @param card the card to be converted
      * @return the string to be printed
      */
     private String reignToPrint(PlaceableCard card) {
-        String output = "";
+        String output;
         switch (card.getReign()) {
             case Fungus -> output = "FUN";
             case Insect -> output = "INS";
@@ -488,9 +483,9 @@ public class ViewCLI extends View {
     }
 
 
-
     /**
      * Prints the current state of the player area
+     *
      * @param area PlayerArea to be printed
      */
     public void showPlayerArea(PlayerArea area) {
@@ -516,23 +511,23 @@ public class ViewCLI extends View {
         ArrayList<Integer[]> availablePositions = area.getAvailablePosition();
 
         int minCellRow = Cells.stream()
-                        .mapToInt(Cell::getRow)
-                        .min()
-                        .orElse(0);
+                .mapToInt(Cell::getRow)
+                .min()
+                .orElse(0);
         int minAvailableRow = availablePositions.stream()
-                        .mapToInt(position -> position[0])
-                        .min()
-                        .orElse(0);
+                .mapToInt(position -> position[0])
+                .min()
+                .orElse(0);
         int minRow = Math.min(minCellRow, minAvailableRow);
 
         int maxCellRow = Cells.stream()
-                        .mapToInt(Cell::getRow)
-                        .max()
-                        .orElse(0);
+                .mapToInt(Cell::getRow)
+                .max()
+                .orElse(0);
         int maxAvailableRow = availablePositions.stream()
-                        .mapToInt(position -> position[0])
-                        .max()
-                        .orElse(0);
+                .mapToInt(position -> position[0])
+                .max()
+                .orElse(0);
         int maxRow = Math.max(maxCellRow, maxAvailableRow);
 
         int minCellColumn = Cells.stream()
@@ -558,7 +553,7 @@ public class ViewCLI extends View {
         // Print the column numbers
         System.out.print("   ");
         for (int i = minColumn; i <= maxColumn; i++) {
-            System.out.print(String.format("%2d%5s", i, ""));
+            System.out.printf("%2d%5s", i, "");
         }
         System.out.println();
 
@@ -567,9 +562,9 @@ public class ViewCLI extends View {
             lines.add(String.format("%2d", i) + " ");
             lines.add("   ");
 
-            for(int j = minColumn; j <= maxColumn; j++) {
+            for (int j = minColumn; j <= maxColumn; j++) {
                 Cell cell = findCell(i, j, Cells);
-                if(cell != null) {
+                if (cell != null) {
                     /*
                      The reference card is always the card on top.
                      If the top card is null, the reference card is the bottom card,
@@ -617,7 +612,7 @@ public class ViewCLI extends View {
                                 lines.set(1, lines.get(1) + otherCardColor(cell, isTopCard) + String.format("%7s", "") + RESET);
                         }
                     }
-                } else if(isAvailablePosition(i, j, availablePositions)) {
+                } else if (isAvailablePosition(i, j, availablePositions)) {
                     // The cell is an available position
                     lines.set(0, lines.get(0) + BLACK_BACKGROUND + String.format("%7s", "") + RESET);
                     lines.set(1, lines.get(1) + printAvailablePosition(i, j));
@@ -625,7 +620,7 @@ public class ViewCLI extends View {
                 } else {
                     // The cell doesn't exist, so it is all black
                     for (int k = 0; k < 2; k++) {
-                        lines.set(k, lines.get(k) + BLACK_BACKGROUND + String.format("%7s","") + RESET);
+                        lines.set(k, lines.get(k) + BLACK_BACKGROUND + String.format("%7s", "") + RESET);
                     }
                 }
             }
@@ -642,8 +637,9 @@ public class ViewCLI extends View {
 
     /**
      * Checks if a position is in a list of available positions
-     * @param row the row of the position
-     * @param column the column of the position
+     *
+     * @param row                the row of the position
+     * @param column             the column of the position
      * @param availablePositions the list of available positions
      * @return true if the position is available, false otherwise
      */
@@ -658,25 +654,27 @@ public class ViewCLI extends View {
 
     /**
      * Finds a cell in a list of cells
-     * @param row the row of the cell
+     *
+     * @param row    the row of the cell
      * @param column the column of the cell
-     * @param cells the list of cells
+     * @param cells  the list of cells
      * @return the cell if found, null otherwise
      */
     private Cell findCell(int row, int column, List<Cell> cells) {
         return cells.stream()
-            .filter(cell -> cell.getRow() == row && cell.getColumn() == column)
-            .findFirst()
-            .orElse(null);
+                .filter(cell -> cell.getRow() == row && cell.getColumn() == column)
+                .findFirst()
+                .orElse(null);
     }
 
     /**
      * Finds the relative position of a cell in a card
+     *
      * @param cell the cell to find
      * @return the relative position of the cell in the card
      */
     private Integer findRelativeCellPosition(Cell cell) {
-        if(cell == null)
+        if (cell == null)
             return null;
 
         PlaceableCard card = cell.getTopCard();
@@ -696,7 +694,8 @@ public class ViewCLI extends View {
 
     /**
      * Prints a label for the available positions
-     * @param row the row of the position
+     *
+     * @param row    the row of the position
      * @param column the column of the position
      * @return the string to be printed
      */
@@ -706,14 +705,14 @@ public class ViewCLI extends View {
 
     /**
      * Prints the color of the bottom card of a cell if it exists
-     * @param cell the cell to be printed
+     *
+     * @param cell      the cell to be printed
      * @param isTopCard if the cell is the top card
      * @return the string to be printed
      */
     private String otherCardColor(Cell cell, boolean isTopCard) {
-        PlaceableCard card = null;
 
-        if(!isTopCard) {
+        if (!isTopCard) {
             return BLACK_BACKGROUND;
         }
         PlaceableCard bottomCard = cell.getBottomCard();
@@ -722,35 +721,28 @@ public class ViewCLI extends View {
 
     /**
      * Prints two colored empty spaces
+     *
      * @param res the reign of the card
      * @return the string to be printed
      */
     private String reignColor(Reign res) {
-        String color = "";
+        String color;
         switch (res) {
-            case Fungus -> {
-                color = RED_BACKGROUND;
-            }
-            case Insect -> {
-                color = PURPLE_BACKGROUND;
-            }
-            case Animal -> {
-                color = CYAN_BACKGROUND;
-            }
-            case Plant -> {
-                color = GREEN_BACKGROUND;
-            }
-            case null, default -> {
-                color = YELLOW_BACKGROUND;
-            }
+            case Fungus -> color = RED_BACKGROUND;
+
+            case Insect -> color = PURPLE_BACKGROUND;
+            case Animal -> color = CYAN_BACKGROUND;
+            case Plant -> color = GREEN_BACKGROUND;
+            case null, default -> color = YELLOW_BACKGROUND;
+
         }
         return color;
     }
 
 
-
     /**
      * Prints the current state of the player hand
+     *
      * @param currentPlayer the player whose hand is to be printed
      */
     protected void showPlayerHand(Player currentPlayer, String viewer) {
@@ -781,7 +773,7 @@ public class ViewCLI extends View {
             System.out.println("\n");
 
         } else {
-            for(PlaceableCard card : hand.getPlaceableCards()) {
+            for (PlaceableCard card : hand.getPlaceableCards()) {
                 this.printDeck(output, card);
             }
 
@@ -797,22 +789,28 @@ public class ViewCLI extends View {
 
     /**
      * Prints the requirements of a card
+     *
      * @param card the card to be printed
-     * @param i the index of the card
+     * @param i    the index of the card
      */
     private void printRequirementCard(PlaceableCard card, int i) {
-        if(card.getPoints() > 0) {
+        if (card.getPoints() > 0) {
             System.out.print("CARD (" + i + ") - ");
-            if(card.getPoints() > 0)
+            if (card.getPoints() > 0)
                 System.out.print("Points: " + card.getPoints());
-            if(card.isGold())
+            if (card.isGold())
                 System.out.print(" - Requirements: " + card.getRequirement());
             System.out.println();
         }
 
     }
 
-
+    /**
+     * Prints the objectives of the game
+     *
+     * @param i      the index of the objective
+     * @param output ArrayList<String>
+     */
     protected void printObjective(int i, ArrayList<String> output) {
         output.set(0, output.get(0) + " ID: " + String.format("%2d", i) + " ");
         output.set(1, output.get(1) + " ");
@@ -823,114 +821,62 @@ public class ViewCLI extends View {
         output.set(6, output.get(6) + " ");
         output.set(7, output.get(7) + " ");
         switch (i) {
-            case 87 ->{
-                output.set(1, output.get(1) + String.format("%7s", ""));
-                output.set(2, output.get(2) + String.format("%4s", "") + RED_BACKGROUND + String.format("%3s", "") + RESET);
-                output.set(3, output.get(3) + String.format("%2s", "") + RED_BACKGROUND + String.format("%3s", "") + RESET + String.format("%2s", ""));
-                output.set(4, output.get(4) + RED_BACKGROUND + String.format("%3s", "") + RESET + String.format("%4s", ""));
-                output.set(5, output.get(5) + String.format("%7s", ""));
-                output.set(6, output.get(6) + RED_BACKGROUND + String.format("%7s", "+2 ") + RESET);
-                output.set(7, output.get(7) + RED_BACKGROUND + String.format("%7s", "Points") + RESET);
-            }
-            case 88 ->{
-                output.set(1, output.get(1) + String.format("%7s", ""));
-                output.set(2, output.get(2) + GREEN_BACKGROUND + String.format("%3s", "") + RESET + String.format("%4s", ""));
-                output.set(3, output.get(3) + String.format("%2s", "") + GREEN_BACKGROUND + String.format("%3s", "") + RESET + String.format("%2s", ""));
-                output.set(4, output.get(4) + String.format("%4s", "") + GREEN_BACKGROUND + String.format("%3s", "") + RESET);
-                output.set(5, output.get(5) + String.format("%7s", ""));
-                output.set(6, output.get(6) + GREEN_BACKGROUND + String.format("%7s", "+2 ") + RESET);
-                output.set(7, output.get(7) + GREEN_BACKGROUND + String.format("%7s", "Points") + RESET);
-            }
-            case 89 ->{
-                output.set(1, output.get(1) + String.format("%7s", ""));
-                output.set(2, output.get(2) + String.format("%4s", "") + CYAN_BACKGROUND + String.format("%3s", "") + RESET);
-                output.set(3, output.get(3) + String.format("%2s", "") + CYAN_BACKGROUND + String.format("%3s", "") + RESET + String.format("%2s", ""));
-                output.set(4, output.get(4) + CYAN_BACKGROUND + String.format("%3s", "") + RESET + String.format("%4s", ""));
-                output.set(5, output.get(5) + String.format("%7s", ""));
-                output.set(6, output.get(6) + CYAN_BACKGROUND + String.format("%7s", "+2 ") + RESET);
-                output.set(7, output.get(7) + CYAN_BACKGROUND + String.format("%7s", "Points") + RESET);
+            case 87 -> outputSet87_89(output, RED_BACKGROUND);
 
-            }
-            case 90 -> {
-                output.set(1, output.get(1) + String.format("%7s", ""));
-                output.set(2, output.get(2) + PURPLE_BACKGROUND + String.format("%3s", "") + RESET + String.format("%4s", ""));
-                output.set(3, output.get(3) + String.format("%2s", "") + PURPLE_BACKGROUND + String.format("%3s", "") + RESET + String.format("%2s", ""));
-                output.set(4, output.get(4) + String.format("%4s", "") + PURPLE_BACKGROUND + String.format("%3s", "") + RESET);
-                output.set(5, output.get(5) + String.format("%7s", ""));
-                output.set(6, output.get(6) + PURPLE_BACKGROUND + String.format("%7s", "+2 ") + RESET);
-                output.set(7, output.get(7) + PURPLE_BACKGROUND + String.format("%7s", "Points") + RESET);
-            }
+            case 88 -> outputSet88_90(output, GREEN_BACKGROUND);
+
+            case 89 -> outputSet87_89(output, CYAN_BACKGROUND);
+
+            case 90 -> outputSet88_90(output, PURPLE_BACKGROUND);
+
             case 91 -> {
                 output.set(1, output.get(1) + " " + String.format("%6s", ""));
                 output.set(2, output.get(2) + " " + RED_BACKGROUND + String.format("%3s", "") + RESET + String.format("%3s", ""));
                 output.set(3, output.get(3) + " " + RED_BACKGROUND + String.format("%3s", "") + RESET + String.format("%3s", ""));
-                output.set(4, output.get(4) + " " + String.format("%2s", "") + GREEN_BACKGROUND + String.format("%3s", "") + RESET + " ");
-                output.set(5, output.get(5) + " " + String.format("%6s", ""));
-                output.set(6, output.get(6) + RED_BACKGROUND + String.format("%7s", "+3 ") + RESET);
-                output.set(7, output.get(7) + RED_BACKGROUND + String.format("%7s", "Points") + RESET);
+                outputSet91_94(output, GREEN_BACKGROUND, RED_BACKGROUND);
             }
             case 92 -> {
                 output.set(1, output.get(1) + " " + String.format("%6s", ""));
                 output.set(2, output.get(2) + " " + String.format("%2s", "") + GREEN_BACKGROUND + String.format("%3s", "") + RESET + " ");
                 output.set(3, output.get(3) + " " + String.format("%2s", "") + GREEN_BACKGROUND + String.format("%3s", "") + RESET + " ");
-                output.set(4, output.get(4) + " " + PURPLE_BACKGROUND + String.format("%3s", "") + RESET + String.format("%2s", "")  + " ");
-                output.set(5, output.get(5) + " " + String.format("%6s", ""));
-                output.set(6, output.get(6) + GREEN_BACKGROUND + String.format("%7s", "+3 ") + RESET);
-                output.set(7, output.get(7) + GREEN_BACKGROUND + String.format("%7s", "Points") + RESET);
+                outputSet92_93(output, PURPLE_BACKGROUND, GREEN_BACKGROUND);
             }
             case 93 -> {
                 output.set(1, output.get(1) + " " + String.format("%6s", ""));
                 output.set(2, output.get(2) + " " + String.format("%2s", "") + RED_BACKGROUND + String.format("%3s", "") + RESET + " ");
                 output.set(3, output.get(3) + " " + CYAN_BACKGROUND + String.format("%3s", "") + RESET + String.format("%2s", "") + " ");
-                output.set(4, output.get(4) + " " + CYAN_BACKGROUND + String.format("%3s", "") + RESET + String.format("%2s", "") + " ");
-                output.set(5, output.get(5) + " " + String.format("%6s", ""));
-                output.set(6, output.get(6) + CYAN_BACKGROUND + String.format("%7s", "+3 ") + RESET);
-                output.set(7, output.get(7) + CYAN_BACKGROUND + String.format("%7s", "Points") + RESET);
+                outputSet92_93(output, CYAN_BACKGROUND, CYAN_BACKGROUND);
             }
             case 94 -> {
                 output.set(1, output.get(1) + " " + String.format("%6s", ""));
                 output.set(2, output.get(2) + " " + CYAN_BACKGROUND + String.format("%3s", "") + RESET + String.format("%3s", ""));
                 output.set(3, output.get(3) + " " + String.format("%2s", "") + PURPLE_BACKGROUND + String.format("%3s", "") + RESET + " ");
-                output.set(4, output.get(4) + " " + String.format("%2s", "") + PURPLE_BACKGROUND + String.format("%3s", "") + RESET + " ");
-                output.set(5, output.get(5) + " " + String.format("%6s", ""));
-                output.set(6, output.get(6) + PURPLE_BACKGROUND + String.format("%7s", "+3 ") + RESET);
-                output.set(7, output.get(7) + PURPLE_BACKGROUND + String.format("%7s", "Points") + RESET);
+                outputSet91_94(output, PURPLE_BACKGROUND, PURPLE_BACKGROUND);
             }
+
             case 95 -> {
                 output.set(1, output.get(1) + String.format("%7s", ""));
-                output.set(2, output.get(2) + RED_BACKGROUND + String.format("%7s", "x3") + RESET );
-                output.set(3, output.get(3) + RED_BACKGROUND + String.format("%7s", "FUNGUS") + RESET );
-                output.set(4, output.get(4) + String.format("%7s", ""));
-                output.set(5, output.get(5) + String.format("%7s", ""));
-                output.set(6, output.get(6) + RED_BACKGROUND + String.format("%7s", "+2 ") + RESET);
-                output.set(7, output.get(7) + RED_BACKGROUND + String.format("%7s", "Points") + RESET);
+                output.set(2, output.get(2) + RED_BACKGROUND + String.format("%7s", "x3") + RESET);
+                output.set(3, output.get(3) + RED_BACKGROUND + String.format("%7s", "FUNGUS") + RESET);
+                outputSet95_96_96_97_98_100_101_102(output, RED_BACKGROUND);
             }
             case 96 -> {
                 output.set(1, output.get(1) + String.format("%7s", ""));
-                output.set(2, output.get(2) + GREEN_BACKGROUND + String.format("%7s", "x3") + RESET );
-                output.set(3, output.get(3) + GREEN_BACKGROUND + String.format("%7s", "PLANT") + RESET );
-                output.set(4, output.get(4) + String.format("%7s", ""));
-                output.set(5, output.get(5) + String.format("%7s", ""));
-                output.set(6, output.get(6) + GREEN_BACKGROUND + String.format("%7s", "+2 ") + RESET);
-                output.set(7, output.get(7) + GREEN_BACKGROUND + String.format("%7s", "Points") + RESET);
+                output.set(2, output.get(2) + GREEN_BACKGROUND + String.format("%7s", "x3") + RESET);
+                output.set(3, output.get(3) + GREEN_BACKGROUND + String.format("%7s", "PLANT") + RESET);
+                outputSet95_96_96_97_98_100_101_102(output, GREEN_BACKGROUND);
             }
             case 97 -> {
                 output.set(1, output.get(1) + String.format("%7s", ""));
-                output.set(2, output.get(2) + CYAN_BACKGROUND + String.format("%7s", "x3") + RESET );
-                output.set(3, output.get(3) + CYAN_BACKGROUND + String.format("%7s", "ANIMAL") + RESET );
-                output.set(4, output.get(4) + String.format("%7s", ""));
-                output.set(5, output.get(5) + String.format("%7s", ""));
-                output.set(6, output.get(6) + CYAN_BACKGROUND + String.format("%7s", "+2 ") + RESET);
-                output.set(7, output.get(7) + CYAN_BACKGROUND + String.format("%7s", "Points") + RESET);
+                output.set(2, output.get(2) + CYAN_BACKGROUND + String.format("%7s", "x3") + RESET);
+                output.set(3, output.get(3) + CYAN_BACKGROUND + String.format("%7s", "ANIMAL") + RESET);
+                outputSet95_96_96_97_98_100_101_102(output, CYAN_BACKGROUND);
             }
             case 98 -> {
                 output.set(1, output.get(1) + String.format("%7s", ""));
-                output.set(2, output.get(2) + PURPLE_BACKGROUND + String.format("%7s", "x3") + RESET );
-                output.set(3, output.get(3) + PURPLE_BACKGROUND + String.format("%7s", "INSECT") + RESET );
-                output.set(4, output.get(4) + String.format("%7s", ""));
-                output.set(5, output.get(5) + String.format("%7s", ""));
-                output.set(6, output.get(6) + PURPLE_BACKGROUND + String.format("%7s", "+2 ") + RESET);
-                output.set(7, output.get(7) + PURPLE_BACKGROUND + String.format("%7s", "Points") + RESET);
+                output.set(2, output.get(2) + PURPLE_BACKGROUND + String.format("%7s", "x3") + RESET);
+                output.set(3, output.get(3) + PURPLE_BACKGROUND + String.format("%7s", "INSECT") + RESET);
+                outputSet95_96_96_97_98_100_101_102(output, PURPLE_BACKGROUND);
             }
             case 99 -> {
                 output.set(1, output.get(1) + String.format("%7s", ""));
@@ -945,28 +891,19 @@ public class ViewCLI extends View {
                 output.set(1, output.get(1) + String.format("%7s", ""));
                 output.set(2, output.get(2) + YELLOW_BACKGROUND + String.format("%7s", "x2 MAN") + RESET);
                 output.set(3, output.get(3) + String.format("%7s", ""));
-                output.set(4, output.get(4) + String.format("%7s", ""));
-                output.set(5, output.get(5) + String.format("%7s", ""));
-                output.set(6, output.get(6) + YELLOW_BACKGROUND + String.format("%7s", "+2 ") + RESET);
-                output.set(7, output.get(7) + YELLOW_BACKGROUND + String.format("%7s", "Points") + RESET);
+                outputSet95_96_96_97_98_100_101_102(output, YELLOW_BACKGROUND);
             }
             case 101 -> {
                 output.set(1, output.get(1) + String.format("%7s", ""));
                 output.set(2, output.get(2) + YELLOW_BACKGROUND + String.format("%7s", "x2 INK") + RESET);
                 output.set(3, output.get(3) + String.format("%7s", ""));
-                output.set(4, output.get(4) + String.format("%7s", ""));
-                output.set(5, output.get(5) + String.format("%7s", ""));
-                output.set(6, output.get(6) + YELLOW_BACKGROUND + String.format("%7s", "+2 ") + RESET);
-                output.set(7, output.get(7) + YELLOW_BACKGROUND + String.format("%7s", "Points") + RESET);
+                outputSet95_96_96_97_98_100_101_102(output, YELLOW_BACKGROUND);
             }
             case 102 -> {
                 output.set(1, output.get(1) + String.format("%7s", ""));
                 output.set(2, output.get(2) + YELLOW_BACKGROUND + String.format("%7s", "x2 QUI") + RESET);
                 output.set(3, output.get(3) + String.format("%7s", ""));
-                output.set(4, output.get(4) + String.format("%7s", ""));
-                output.set(5, output.get(5) + String.format("%7s", ""));
-                output.set(6, output.get(6) + YELLOW_BACKGROUND + String.format("%7s", "+2 ") + RESET);
-                output.set(7, output.get(7) + YELLOW_BACKGROUND + String.format("%7s", "Points") + RESET);
+                outputSet95_96_96_97_98_100_101_102(output, YELLOW_BACKGROUND);
 
             }
         }
@@ -974,10 +911,73 @@ public class ViewCLI extends View {
     }
 
     /**
+     * @param output        ArrayList<String>
+     * @param redBackground String
+     */
+    private void outputSet95_96_96_97_98_100_101_102(ArrayList<String> output, String redBackground) {
+        output.set(4, output.get(4) + String.format("%7s", ""));
+        output.set(5, output.get(5) + String.format("%7s", ""));
+        output.set(6, output.get(6) + redBackground + String.format("%7s", "+2 ") + RESET);
+        output.set(7, output.get(7) + redBackground + String.format("%7s", "Points") + RESET);
+    }
+
+    /**
+     * @param output          ArrayList<String>
+     * @param greenBackground String
+     */
+    private void outputSet92_93(ArrayList<String> output, String purpleBackground, String greenBackground) {
+        output.set(4, output.get(4) + " " + purpleBackground + String.format("%3s", "") + RESET + String.format("%2s", "") + " ");
+        output.set(5, output.get(5) + " " + String.format("%6s", ""));
+        output.set(6, output.get(6) + greenBackground + String.format("%7s", "+3 ") + RESET);
+        output.set(7, output.get(7) + greenBackground + String.format("%7s", "Points") + RESET);
+    }
+
+    /**
+     * @param output          ArrayList<String>
+     * @param greenBackground String
+     * @param redBackground   String
+     */
+    private void outputSet91_94(ArrayList<String> output, String greenBackground, String redBackground) {
+        output.set(4, output.get(4) + " " + String.format("%2s", "") + greenBackground + String.format("%3s", "") + RESET + " ");
+        output.set(5, output.get(5) + " " + String.format("%6s", ""));
+        output.set(6, output.get(6) + redBackground + String.format("%7s", "+3 ") + RESET);
+        output.set(7, output.get(7) + redBackground + String.format("%7s", "Points") + RESET);
+    }
+
+    /**
+     * @param output          ArrayList<String>
+     * @param greenBackground String
+     */
+    private void outputSet88_90(ArrayList<String> output, String greenBackground) {
+        output.set(1, output.get(1) + String.format("%7s", ""));
+        output.set(2, output.get(2) + greenBackground + String.format("%3s", "") + RESET + String.format("%4s", ""));
+        output.set(3, output.get(3) + String.format("%2s", "") + greenBackground + String.format("%3s", "") + RESET + String.format("%2s", ""));
+        output.set(4, output.get(4) + String.format("%4s", "") + greenBackground + String.format("%3s", "") + RESET);
+        output.set(5, output.get(5) + String.format("%7s", ""));
+        output.set(6, output.get(6) + greenBackground + String.format("%7s", "+2 ") + RESET);
+        output.set(7, output.get(7) + greenBackground + String.format("%7s", "Points") + RESET);
+    }
+
+    /**
+     * @param output        ArrayList<String>
+     * @param redBackground String
+     */
+    private void outputSet87_89(ArrayList<String> output, String redBackground) {
+        output.set(1, output.get(1) + String.format("%7s", ""));
+        output.set(2, output.get(2) + String.format("%4s", "") + redBackground + String.format("%3s", "") + RESET);
+        output.set(3, output.get(3) + String.format("%2s", "") + redBackground + String.format("%3s", "") + RESET + String.format("%2s", ""));
+        output.set(4, output.get(4) + redBackground + String.format("%3s", "") + RESET + String.format("%4s", ""));
+        output.set(5, output.get(5) + String.format("%7s", ""));
+        output.set(6, output.get(6) + redBackground + String.format("%7s", "+2 ") + RESET);
+        output.set(7, output.get(7) + redBackground + String.format("%7s", "Points") + RESET);
+    }
+
+    /**
      * this method allow the user to say if he wants to connect with socket or rmi
+     *
      * @return boolean
      */
-    public boolean askSocket () {
+    public boolean askSocket() {
         Scanner scanner = new Scanner(System.in);
 
         while (true) {
@@ -988,36 +988,35 @@ public class ViewCLI extends View {
         }
     }
 
-
     /**
      * this method allow the client to visualize the server response about the connection
+     *
      * @param message the message received from the server
      */
-    public void answerToConnection (connectionResponseMessage message){
+    public void answerToConnection(connectionResponseMessage message) {
         if (message.getCorrect())
             System.out.println("the connection has been established");
     }
 
     /**
-     *
      * @param message the message received from the server
      * @return message with the values chosen by the user
      */
-    public serverOptionMessage serverOptions (serverOptionMessage message){
+    public serverOptionMessage serverOptions(serverOptionMessage message) {
         Scanner scanner = new Scanner(System.in);
-        boolean newMatch = false;
-        Integer matchID = null;
+        boolean newMatch;
+        Integer matchID;
         Integer startedMatchID = null;
         boolean loadMatch = false;
         Integer savedMatchID = null;
 
         // Asks the user if he wants to join a new match
-        while(true) {
+        while (true) {
             System.out.print("Do you want to join a new match? [YES/no] ");
             String choice = scanner.nextLine().toLowerCase();
-            if(choice.equals("yes") || choice.equals("y") || choice.equals("ye" )) {
+            if (choice.equals("yes") || choice.equals("y") || choice.equals("ye")) {
                 newMatch = true;
-            } else if(choice.equals("no") || choice.equals("n"))     {
+            } else if (choice.equals("no") || choice.equals("n")) {
                 newMatch = false;
             } else {
                 System.out.println("ANSWER NOT VALID");
@@ -1027,57 +1026,55 @@ public class ViewCLI extends View {
         }
 
         // Asks the user if he wants to create a new match or join an existing one in waiting
-        while (newMatch) {
+        while (true) {
             System.out.print("Create a New Match (1) or Join a Match (2)? ");
             String choice = scanner.nextLine().toLowerCase();
-            if(choice.equals("2")) {
-                    if(message.getWaitingMatches().isEmpty()) {
-                        System.out.println("There are no matches to join: creating a new match");
-                        matchID = null;
-                        break;
-                    } else {
-                        System.out.println("Here are the matches you can join: ");
-                        int i = 1;
-                        for (Integer id : message.getWaitingMatches()) {
-                            System.out.println("(" + i + ") " + id);
-                            i += 1;
-                        }
-                        System.out.print("Enter the match number: ");
-                        try {
-                            matchID = scanner.nextInt();
-                            scanner.nextLine();
-                            if (matchID < 1 || matchID > i) {
-                                System.out.println("ANSWER NOT VALID");
-                                continue;
-                            }
-                            matchID = message.getWaitingMatches().get(matchID - 1);
-                            break;
-                        } catch (Exception e) {
-                            scanner.nextLine();
+            if (choice.equals("2")) {
+                if (message.getWaitingMatches().isEmpty()) {
+                    System.out.println("There are no matches to join: creating a new match");
+                    matchID = null;
+                    break;
+                } else {
+                    System.out.println("Here are the matches you can join: ");
+                    int i = 1;
+                    for (Integer id : message.getWaitingMatches()) {
+                        System.out.println("(" + i + ") " + id);
+                        i += 1;
+                    }
+                    System.out.print("Enter the match number: ");
+                    try {
+                        matchID = scanner.nextInt();
+                        scanner.nextLine();
+                        if (matchID < 1 || matchID > i) {
                             System.out.println("ANSWER NOT VALID");
                             continue;
                         }
+                        matchID = message.getWaitingMatches().get(matchID - 1);
+                        break;
+                    } catch (Exception e) {
+                        scanner.nextLine();
+                        System.out.println("ANSWER NOT VALID");
                     }
+                }
 
-            } else if(choice.equals("1")) {
+            } else if (choice.equals("1")) {
                 matchID = null;
                 break;
             } else {
                 System.out.println("ANSWER NOT VALID");
-                continue;
             }
         }
 
 
-        if(!newMatch) {
+        if (!newMatch) {
 
-            boolean runMatch = false;
-            while (true)  {
+            boolean runMatch;
+            while (true) {
                 System.out.print("Join a running match? [YES/no] ");
                 String choice = scanner.nextLine().toLowerCase();
-                if(choice.equals("yes") || choice.equals("y")) {
+                if (choice.equals("yes") || choice.equals("y")) {
                     runMatch = true;
-                } else if(choice.equals("no") || choice.equals("n")) {
+                } else if (choice.equals("no") || choice.equals("n")) {
                     runMatch = false;
                 } else {
                     System.out.println("ANSWER NOT VALID");
@@ -1087,8 +1084,7 @@ public class ViewCLI extends View {
 
             }
 
-
-            if(runMatch) {
+            if (runMatch) {
 
                 // Asks the user which running match he wants to join
                 while (true) {
@@ -1103,7 +1099,7 @@ public class ViewCLI extends View {
                             System.out.println("(" + i + ") " + id);
                             i += 1;
                         }
-                        System.out.print("Enter the match numer: ");
+                        System.out.print("Enter the match number: ");
                         try {
                             startedMatchID = scanner.nextInt();
                             scanner.nextLine();
@@ -1117,7 +1113,6 @@ public class ViewCLI extends View {
                         } catch (Exception e) {
                             scanner.nextLine();
                             System.out.println("You didn't enter an int value");
-                            continue;
                         }
                     }
                 }
@@ -1126,10 +1121,10 @@ public class ViewCLI extends View {
                 while (true) {
                     System.out.print("Join a saved match? [YES/no] ");
                     String choice = scanner.nextLine().toLowerCase();
-                    if(choice.equals("yes") || choice.equals("y")) {
+                    if (choice.equals("yes") || choice.equals("y")) {
                         loadMatch = true;
-                    } else if(choice.equals("no") || choice.equals("n")) {
-                        loadMatch = false;
+                    } else if (choice.equals("no") || choice.equals("n")) {
+                        break;
                     } else {
                         System.out.println("ANSWER NOT VALID");
                         continue;
@@ -1137,7 +1132,7 @@ public class ViewCLI extends View {
                     break;
                 }
 
-                if(loadMatch) {
+                if (loadMatch) {
                     // Asks the user which saved match he wants to join
                     while (true) {
                         if (message.getSavedMatches().isEmpty()) {
@@ -1166,13 +1161,10 @@ public class ViewCLI extends View {
                             } catch (Exception e) {
                                 scanner.nextLine();
                                 System.out.println("ANSWER NOT VALID");
-                                continue;
                             }
                         }
                     }
                 }
-
-
             }
 
         }
@@ -1182,28 +1174,16 @@ public class ViewCLI extends View {
     }
 
     /**
-     * allow the user to see if he managed to join the match
-     * @param message the message received from the server
-     */
-    public void answerToOption (serverOptionResponseMessage message){
-        if (message.getCorrect()) {
-            System.out.println("You joined correctly the match " + message.getMatchID());
-        } else {
-            System.out.println("An error occurred, you couldn't join the game");
-        }
-    }
-
-    /**
      * this method shows which nicknames are not available and allows the user to choose his nickname
+     *
      * @param message the message received from the server
      * @return the chosen nickname
      */
-    public String unavailableNames(unavailableNamesMessage message){
+    public String unavailableNames(unavailableNamesMessage message) {
         //the client can call the method view.unavailableNames passing as a parameter the arraylist of unavailable names received from server
-        if(!message.toString().equals("[]")) {
+        if (!message.toString().equals("[]")) {
             System.out.println("This nicknames are not available: " + message);
-        }
-        else {
+        } else {
             System.out.println("All nicknames are available");
         }
 
@@ -1216,9 +1196,10 @@ public class ViewCLI extends View {
 
     /**
      * visualize the response about the value entered
+     *
      * @param message the message received from the server
      */
-    public void answer (responseMessage message){
+    public void answer(responseMessage message) {
         if (!message.getCorrect())
             System.out.println("You didn't entered a valid value, please try again");
     }
@@ -1226,9 +1207,10 @@ public class ViewCLI extends View {
 
     /**
      * this method shows what colors are available and allows the user to choose his color
+     *
      * @param message the message received from the server
      */
-    public String availableColors (availableColorsMessage message){
+    public String availableColors(availableColorsMessage message) {
         //the client can call the method view.availableColors passing as a parameter the arraylist of available colors received from server
         System.out.println("This are the colors that are available: " + message.toString());
 
@@ -1240,10 +1222,11 @@ public class ViewCLI extends View {
     }
 
     /**
-     *this method allow the user to place his starter card
+     * this method allow the user to place his starter card
+     *
      * @return the side of the card
      */
-    public int placeStarter () {
+    public int placeStarter() {
         System.out.println("Place your STARTER card on the table");
         Scanner scanner = new Scanner(System.in);
 
@@ -1261,15 +1244,15 @@ public class ViewCLI extends View {
         }
     }
 
-
     /**
      * allow the user to choose how many players will play
+     *
      * @return number of expected players
      */
-    public int expectedPlayers () {
-        int numExpected = 0;
+    public int expectedPlayers() {
+        int numExpected;
         Scanner scanner = new Scanner(System.in);
-        while(true) {
+        while (true) {
 
             try {
                 System.out.println("How many player do you want to be in the game");
@@ -1287,10 +1270,11 @@ public class ViewCLI extends View {
 
     /**
      * allow the user to choose his secret objective
+     *
      * @return objective
      */
-    public int chooseObjective (ArrayList<ObjectiveCard> objectives) {
-        int objective = 1000;
+    public int chooseObjective(ArrayList<ObjectiveCard> objectives) {
+        int objective;
         System.out.println("You have to choose your personal objective");
 
         for (int i = 0; i < objectives.size(); i++) {
@@ -1299,28 +1283,14 @@ public class ViewCLI extends View {
 
         System.out.println("Choose your personal objective.");
         ArrayList<String> output = new ArrayList<>();
-        output.add("");
-        output.add("");
-        output.add("");
-        output.add("");
-        output.add("");
-        output.add("");
-        output.add("");
-        output.add("");
+        addOutput(output);
         this.printObjective(objectives.get(0).getID(), output);
         this.printObjective(objectives.get(1).getID(), output);
-        System.out.println(output.get(0));
-        System.out.println(output.get(1));
-        System.out.println(output.get(2));
-        System.out.println(output.get(3));
-        System.out.println(output.get(4));
-        System.out.println(output.get(5));
-        System.out.println(output.get(6));
-        System.out.println(output.get(7));
+        printOutput(output);
 
         System.out.print("FIRST (1) or SECOND (2) ?  ");
         Scanner scanner = new Scanner(System.in);
-        while(true) {
+        while (true) {
             try {
                 objective = scanner.nextInt();
                 scanner.nextLine();
@@ -1333,18 +1303,30 @@ public class ViewCLI extends View {
         return objective;
     }
 
+    private void printOutput(ArrayList<String> output) {
+        System.out.println(output.get(0));
+        System.out.println(output.get(1));
+        System.out.println(output.get(2));
+        System.out.println(output.get(3));
+        System.out.println(output.get(4));
+        System.out.println(output.get(5));
+        System.out.println(output.get(6));
+        System.out.println(output.get(7));
+    }
+
     /**
      * allow the user to say what card he wants to play, front or back, and in which position
+     *
      * @return Array of int representing the card chosen by the user
      */
-    public int[] placeCard () {
+    public int[] placeCard() {
         int[] chosenCard = new int[4];
         chosenCard[0] = 1000;
         chosenCard[1] = 1000;
         chosenCard[2] = 1000;
         chosenCard[3] = 1000;
         Scanner scanner = new Scanner(System.in);
-        while(true) {
+        while (true) {
             try {
                 System.out.print("Enter the NUMBER of the card you want to place: ");
                 chosenCard[0] = scanner.nextInt();
@@ -1357,8 +1339,8 @@ public class ViewCLI extends View {
         }
 
         boolean correct = false;
-        while(!correct) {
-            System.out.print ("FRONT or BACK?" );
+        while (!correct) {
+            System.out.print("FRONT or BACK?");
             String choice = scanner.nextLine().toLowerCase();
             switch (choice) {
                 case "front", "front side" -> {
@@ -1373,7 +1355,7 @@ public class ViewCLI extends View {
         }
 
 
-        while(true) {
+        while (true) {
             try {
                 System.out.print("ROW: ");
                 chosenCard[2] = scanner.nextInt();
@@ -1386,7 +1368,7 @@ public class ViewCLI extends View {
         }
 
 
-        while(true) {
+        while (true) {
             try {
                 System.out.print("COLUMN: ");
                 chosenCard[3] = scanner.nextInt();
@@ -1403,9 +1385,10 @@ public class ViewCLI extends View {
 
     /**
      * allow the user to say what card he wants to pick
+     *
      * @return the id of the card the user wants to pick
      */
-    public int pickCard () {
+    public int pickCard() {
         int choice = 1000;
         Scanner scanner = new Scanner(System.in);
         try {
@@ -1422,11 +1405,12 @@ public class ViewCLI extends View {
 
     /**
      * visualize the final information about the game, points and number of objectives achieved by the players
+     *
      * @param message the message received from the server
      */
-    public void endGame (declareWinnerMessage message){
-        HashMap<String, Integer> points = new HashMap<>();
-        HashMap<String, Integer> numObjectives = new HashMap<>();
+    public void endGame(declareWinnerMessage message) {
+        HashMap<String, Integer> points;
+        HashMap<String, Integer> numObjectives;
 
         points = message.getPlayersPoints();
         numObjectives = message.getNumberOfObjects();
@@ -1441,6 +1425,7 @@ public class ViewCLI extends View {
 
     /**
      * Visualizes the updated state of the current player
+     *
      * @param update the message received from the server
      */
     @Override
@@ -1454,6 +1439,7 @@ public class ViewCLI extends View {
 
     /**
      * this method allows the user to choose a nickname from the list of available names
+     *
      * @param message the message containing the list of available names
      * @return the chosen nickname
      */
@@ -1461,8 +1447,8 @@ public class ViewCLI extends View {
     public String pickNameFA(unavailableNamesMessage message) {
         System.out.println("Please choose a nickname: ");
         int i = 1;
-        for(String name : message.getNames()) {
-            System.out.println("("+ i + ") " + name);
+        for (String name : message.getNames()) {
+            System.out.println("(" + i + ") " + name);
             i += 1;
         }
         while (true) {
